--- a/index.html
+++ b/index.html
@@ -28,15 +28,23 @@
       width: 200px;
       margin: 20px;
       text-align: center;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      padding: 10px;
     }
     .sticker img {
       width: 100%;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     .sticker h2 {
       font-size: 18px;
       margin: 10px 0;
+    }
+    .checkbox-label {
+      display: block;
+      margin-top: 10px;
+      font-size: 16px;
     }
     .button {
       display: inline-block;
@@ -60,22 +68,44 @@
       width: 100%;
       bottom: 0;
     }
+    .hidden {
+      display: none;
+    }
   </style>
+  <script>
+    window.onload = function() {
+      var password = "letmein69"; // Set your desired password here
+      var userPassword = prompt("Enter the password:");
+      if (userPassword !== password) {
+        document.body.innerHTML = "<h1>Access Denied</h1>";
+      } else {
+        document.querySelector(".hidden").style.display = "block";
+      }
+    };
+  </script>
 </head>
 <body>
   <header>
     <h1>Sticker Collection</h1>
   </header>
   
-  <div class="container">
+  <div class="container hidden">
     <section>
       <div class="sticker">
         <img src="images/ORIGINAL.png" alt="Original Sticker">
         <h2>Original Sticker</h2>
+        <label class="checkbox-label">
+          <input type="checkbox" name="sticker1" id="sticker1">
+          Mark as Collected
+        </label>
       </div>
       <div class="sticker">
         <img src="images/GLITCH.png" alt="Glitch Sticker">
         <h2>Glitch Sticker</h2>
+        <label class="checkbox-label">
+          <input type="checkbox" name="sticker2" id="sticker2">
+          Mark as Collected
+        </label>
       </div>
     </section>
     
