--- a/index.html
+++ b/index.html
@@ -1,118 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sticker Collection</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    .container {
-      width: 80%;
-      margin: auto;
-      padding: 20px;
-    }
-    .sticker {
-      display: inline-block;
-      width: 200px;
-      margin: 20px;
-      text-align: center;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      padding: 10px;
-    }
-    .sticker img {
-      width: 100%;
-      border-radius: 10px;
-    }
-    .sticker h2 {
-      font-size: 18px;
-      margin: 10px 0;
-    }
-    .checkbox-label {
-      display: block;
-      margin-top: 10px;
-      font-size: 16px;
-    }
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      margin: 10px;
-      font-size: 16px;
-      color: #fff;
-      background-color: #007BFF;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-    .button:hover {
-      background-color: #0056b3;
-    }
-    footer {
-      background-color: #4CAF50;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-    }
-    .hidden {
-      display: none;
-    }
-  </style>
-  <script>
-    window.onload = function() {
-      var password = "letmein69"; // Set your desired password here
-      var userPassword = prompt("Enter the password:");
-      if (userPassword !== password) {
-        document.body.innerHTML = "<h1>Access Denied</h1>";
-      } else {
-        document.querySelector(".hidden").style.display = "block";
-      }
-    };
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sticker Catalog</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Sticker Collection</h1>
-  </header>
-  
-  <div class="container hidden">
-    <section>
-      <div class="sticker">
-        <img src="images/ORIGINAL.png" alt="Original Sticker">
-        <h2>Original Sticker</h2>
-        <label class="checkbox-label">
-          <input type="checkbox" name="sticker1" id="sticker1">
-          Mark as Collected
-        </label>
-      </div>
-      <div class="sticker">
-        <img src="images/GLITCH.png" alt="Glitch Sticker">
-        <h2>Glitch Sticker</h2>
-        <label class="checkbox-label">
-          <input type="checkbox" name="sticker2" id="sticker2">
-          Mark as Collected
-        </label>
-      </div>
-    </section>
-    
-    <footer>
-      <a href="https://whisqey.co" class="button">Back to Whisqey</a>
-      <p>&copy; 2024 Whisqey. All rights reserved.</p>
-    </footer>
-  </div>
+    <header>
+        <a href="https://whisqey.co" id="logo-link">
+            <img src="images/logo.png" alt="Whisqey Logo">
+        </a>
+    </header>
+    <main>
+        <section id="stickers">
+            <div class="sticker">
+                <img src="images/ORIGINAL.png" alt="Base Sticker">
+                <label>
+                    <input type="checkbox">
+                    Base Sticker
+                </label>
+            </div>
+            <div class="sticker">
+                <img src="images/GLITCH.png" alt="Special Sticker">
+                <label>
+                    <input type="checkbox">
+                    Special Sticker
+                </label>
+            </div>
+        </section>
+    </main>
+    <script src="scripts.js"></script>
 </body>
 </html>
