updated css and html for style and functionality

--- a/index.html
+++ b/index.html
@@ -5,38 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Stickerbook</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Initial style to hide content */
+        .hidden-content {
+            display: none;
+        }
+        .visible-content {
+            display: block;
+        }
+    </style>
+    <script>
+        function checkPassword() {
+            var password = prompt("Please enter the password:");
+            if (password === "letmein69") {
+                document.getElementById('hidden-content').classList.remove('hidden-content');
+                document.getElementById('hidden-content').classList.add('visible-content');
+                document.getElementById('password-overlay').style.display = 'none';
+            } else {
+                document.body.innerHTML = "Access denied.";
+            }
+        }
+        window.onload = checkPassword;
+    </script>
 </head>
 <body>
-    <header>
-        <div class="banner">
-            <a href="https://whisqey.co">Back to Whisqey.co</a>
-        </div>
-        <h1>My Stickerbook</h1>
-    </header>
-
-    <section class="series" id="series1">
-        <h2>Series 1</h2>
-        <div class="sticker-container">
-            <div class="sticker original">
-                <img src="images/ORIGINAL.png" alt="Original Sticker">
-                <label>
-                    <input type="checkbox" class="ownership-checkbox">
-                    Own it? Click here
-                </label>
-            </div>
-            <div class="sticker glitch">
-                <img src="images/GLITCH.png" alt="Glitch Sticker">
-                <label>
-                    <input type="checkbox" class="ownership-checkbox">
-                    Own it? Click here
-                </label>
-            </div>
-        </div>
-    </section>
-
-    <section class="exclusives">
-        <h2>Event Exclusives / Seasonal</h2>
-        <!-- Add exclusive stickers here -->
-    </section>
+    <div id="password-overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #fff; display: flex; align-items: center; justify-content: center;">
+        <h1>Access Restricted</h1>
+    </div>
+    <div id="hidden-content" class="hidden-content">
+        <header>
+            <a href="https://whisqey.co" class="back-link">Back to whisqey.co</a>
+            <h1>My Stickerbook</h1>
+        </header>
+        <main>
+            <section class="sticker-section">
+                <h2>Series 1</h2>
+                <div class="sticker-item">
+                    <div class="title">The Original</div>
+                    <div class="rarity-box original">
+                        <img src="images/ORIGINAL.png" alt="Original Sticker" class="sticker-image">
+                    </div>
+                    <label class="checkbox-container">
+                        <input type="checkbox">
+                        <span class="checkbox-text">Own it? Click here!</span>
+                    </label>
+                </div>
+                <div class="sticker-item">
+                    <div class="title">The Glitch</div>
+                    <div class="rarity-box glitch">
+                        <img src="images/GLITCH.png" alt="Glitch Sticker" class="sticker-image">
+                    </div>
+                    <label class="checkbox-container">
+                        <input type="checkbox">
+                        <span class="checkbox-text">Own it? Click here!</span>
+                    </label>
+                </div>
+            </section>
+            <section class="sticker-section">
+                <h2>Event Exclusives / Seasonal</h2>
+                <!-- Add exclusives stickers here -->
+            </section>
+        </main>
+        <footer>
+            <p>Whisqey All Rights Reserved</p>
+        </footer>
+    </div>
 </body>
 </html>
