--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="sticker-item">
                     <div class="title">The Glitch</div>
                     <div class="rarity-box glitch">
-                        <img src="images/GLITCH.png" alt="Glitch Sticker" class="sticker-image">
+                        <img src="images/GLITCH2.png" alt="Glitch Sticker" class="sticker-image">
                     </div>
                     <label class="checkbox-container">
                         <input type="checkbox">
